--- a/UI/styles/client_dashboard.css
+++ b/UI/styles/client_dashboard.css
@@ -349,4 +349,11 @@ div.input a {
   button.dropdown-btn span {
     margin-left: -0.1em;
   }
+
+  .a,
+  .a input,
+  button,
+  .btn {
+    cursor: pointer;
+  }
 }
