--- a/UI/styles/completeProfile.css
+++ b/UI/styles/completeProfile.css
@@ -1,18 +1,35 @@
+.main-content {
+  width: 100% !important;
+  padding-right: 3em;
+  padding-right: 3em;
+}
+
 div.complete-profile.box {
-  width: 80%;
-  margin-left: -2.5em;
+  margin-left: -0.5em;
+  margin-right: auto;
   margin-top: 0;
   height: fit-content;
-  position: absolute;
+
+  width: 110%;
+}
+div.complete-profile.cp {
+  margin-left: -0.6em;
+  margin-right: auto;
+  margin-top: 0;
+  height: fit-content;
+}
+div.complete-profile.client-profile {
+  margin-left: -0.6em;
 }
 .profile-data {
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto;
   border: none;
-  width: 100%;
+  width: 100% !important;
   margin: 0 auto;
 }
+
 .bio-data {
   grid-row: 1 / 2;
   border-right: none;
@@ -41,12 +58,16 @@ img.user-image {
   height: 100px;
   width: 100px;
 }
+label {
+  text-align: center;
+}
 select {
   margin: 0 auto;
 }
+
 input,
 select {
-  width: 15em;
+  width: 70%;
 }
 .input,
 label,
@@ -57,8 +78,6 @@ select {
 
 .input input,
 .input select {
-  padding-left: 3rem;
-  padding-right: 3rem;
   font-family: "Circular-Light";
   font-size: 0.8rem;
   border: 1px solid #c5cfd9;
@@ -70,7 +89,7 @@ select {
 }
 .input input.img {
   border: none;
-  width: 250px;
+  width: 200px;
   margin: 5px 6em;
 }
 .profile-Input {
@@ -104,10 +123,10 @@ form label {
   border: 1px solid transparent;
   border-radius: 0.25rem;
   -moz-border-radius: 50px;
-  margin-left: 5px;
+  margin: 20px 35%;
   margin-right: 5px;
   font-size: 16px;
-  height: 20px;
+  height: 40px;
   color: white;
   width: 70px;
   text-align: center;
@@ -131,6 +150,12 @@ div.input a {
 /* Media Queries */
 
 @media only screen and (min-width: 40.063em) and (max-width: 64em) {
+  div.complete-profile.box {
+    width: 80vw;
+    margin-left: 10px;
+    height: 85vh;
+    padding-top: 1em;
+  }
   .profile-data.cp {
     display: grid;
     grid-template-columns: 40% 30% 30%;
@@ -138,6 +163,16 @@ div.input a {
     grid-template-areas: "left center right";
     height: 66vh;
     margin-top: 10px;
+    width: 100%;
+    border: 1px solid #111;
+  }
+  .profile-data {
+    display: grid;
+    grid-template-columns: 40% 30% 30%;
+    grid-template-rows: 1fr;
+    grid-template-areas: "left center right";
+    height: 70vh;
+    margin-top: -5px;
     width: 100%;
     border: 1px solid #111;
   }
@@ -185,12 +220,6 @@ div.input a {
     display: grid;
     text-align: center;
   }
-  div.complete-profile.box {
-    width: 80vw;
-    margin-left: 10px;
-    height: calc(85vh - 40px);
-    padding-top: 1em;
-  }
 
   .input input,
   .input select {
@@ -205,15 +234,25 @@ div.input a {
     width: 40%;
     margin-right: 7em;
   }
+  .btn {
+    margin: 10px 45%;
+    height: 30px;
+  }
 }
 @media only screen and (min-width: 64.063em) {
-  .profile-data.cp {
+  div.complete-profile.box {
+    width: 65vw;
+    margin-left: 13em;
+    height: calc(85vh);
+    padding-top: 1em;
+  }
+  .profile-data {
     display: grid;
     grid-template-columns: 40% 30% 30%;
     grid-template-rows: 1fr;
     grid-template-areas: "left center right";
-    height: 66vh;
-    margin-top: 10px;
+    height: 69vh;
+    margin-top: -5px;
     width: 100%;
     border: 1px solid #111;
   }
@@ -227,7 +266,7 @@ div.input a {
   .bio-data select {
     float: right;
     margin-top: -2em;
-    margin-right: 11em;
+    margin-right: 12em;
   }
   .bio-data label {
     margin-right: 23em;
@@ -255,15 +294,14 @@ div.input a {
     display: grid;
     text-align: center;
   }
-
-  div.complete-profile.box {
-    width: 65vw;
-    margin-left: 13em;
-    height: calc(85vh - 25px);
-    padding-top: 1em;
-  }
   .input input.img {
     width: 60%;
     margin-left: 6em;
+  }
+  .btn {
+    margin: 10px 44%;
+    height: 40px;
+    width: 90px;
+    font-size: 18px;
   }
 }
