[Chore #165609206] Update page links

--- a/UI/views/Admin/adminDashboard.html
+++ b/UI/views/Admin/adminDashboard.html
@@ -102,8 +102,7 @@
                 />
               </button>
               <div class="settings-container">
-                <a href="./completeProfile.html">Complete Profile</a><br><br>
-                <a href="./Profile.html">View Profile</a>
+                <a href="./blacklist.html">Blacklist</a><br><br>
               </div>
             </li>
           </ul>
