--- a/UI/views/Admin/viewSingleApplication.html
+++ b/UI/views/Admin/viewSingleApplication.html
@@ -104,9 +104,7 @@
                 />
               </button>
               <div class="settings-container">
-                <a href="./completeProfile.html">Complete Profile</a><br><br>
-                <a href="./Profile.html">View Profile</a><br><br>
-                <a href="./Profile.html">Blacklist</a>
+               <a href="./blacklist.html">Blacklist</a><br><br>
               </div>
             </li>
           </ul>
@@ -191,7 +189,7 @@
 
             <div class="profile dt-applied">
                 <label class="dt-applied" for="dt-applied">Date Applied</label>
-            <input class="profile-Input" type="text" name="dt-applied" placeholder="" readonly>
+            <input class="profile-Input" type="date" name="dt-applied" placeholder="" readonly>
              </div>
             
             </div>
