--- a/UI/views/Admin/viewUsers.html
+++ b/UI/views/Admin/viewUsers.html
@@ -102,10 +102,8 @@
                   src="../../assets/imgs/caret-down.png"
                 />
               </button>
-              <div class="settings-container">
-                <a href="./completeProfile.html">Complete Profile</a><br><br>
-                <a href="./Profile.html">View Profile</a><br><br>
-                <a href="./Profile.html">Blacklist</a>
+              <div class="settings-container">          
+                <a href="./blacklist.html">Blacklist</a> <br><br>
               </div>
             </li>
           </ul>
@@ -138,7 +136,7 @@
                 <a
                   class="btn btn-view"
                   role="button"
-                  href="./clientProfiles.html"
+                  href="./clientProfile.html"
                   >View
                 </a>
                 <button type="submit" class="btn btn-danger">Delete</button>
@@ -154,7 +152,7 @@
                 <a
                   class="btn btn-view"
                   role="button"
-                  href="./clientProfiles.html"
+                  href="./clientProfile.html"
                   >View
                 </a>
                 <button type="submit" class="btn btn-danger">Delete</button>
@@ -169,7 +167,7 @@
                 <a
                   class="btn btn-view"
                   role="button"
-                  href="./clientProfiles.html"
+                  href="./clientProfile.html"
                   >View
                 </a>
                 <button type="submit" class="btn btn-danger">Delete</button>
