--- a/UI/views/Client/completeProfile.html
+++ b/UI/views/Client/completeProfile.html
@@ -98,7 +98,8 @@
                 />
               </button>
               <div class="settings-container">
-                <a href="./completeProfile.html">Complete Profile</a>
+                <a href="./completeProfile.html">Complete Profile</a><br /><br />
+                <a href="./userProfile.html">View Profile</a>
               </div>
             </li>
           </ul>
