--- a/UI/views/Client/paymentHistory.html
+++ b/UI/views/Client/paymentHistory.html
@@ -93,7 +93,8 @@
               <img class="caret-down" src="../../assets/imgs/caret-down.png" />
             </button>
             <div class="settings-container">
-              <a href="./completeProfile.html">Complete Profile</a>
+              <a href="./completeProfile.html">Complete Profile</a><br /><br />
+              <a href="./userProfile.html">View Profile</a>
             </div>
           </li>
         </ul>
@@ -113,7 +114,6 @@
               <th>Date</th>
               <th>Transaction ID</th>
               <th>Transaction Type</th>
-              <th>Loan ID</th>
               <th>Amount Paid</th>
               <th>Balance</th>
             </tr>
@@ -121,7 +121,6 @@
               <td>25-12-2018</td>
               <td>DKHB0087V</td>
               <td>Disbursement</td>
-              <td>ln004</td>
               <td>00</td>
               <td>5000</td>
             </tr>
@@ -129,7 +128,6 @@
               <td>25-12-2018</td>
               <td>MKHB0087V</td>
               <td>Repayment</td>
-              <td>ln004</td>
               <td>1000</td>
               <td>4000</td>
             </tr>
@@ -137,7 +135,6 @@
               <td>15-01-2019</td>
               <td>MKYB11087</td>
               <td>Repayment</td>
-              <td>ln004</td>
               <td>1500</td>
               <td>2500</td>
             </tr>
@@ -145,7 +142,6 @@
               <td>20-01-2019</td>
               <td>JKHB0087V</td>
               <td>Repayment</td>
-              <td>ln004</td>
               <td>500</td>
               <td>2000</td>
             </tr>
@@ -153,7 +149,6 @@
               <td>25-02-2019</td>
               <td>MKHB0087V</td>
               <td>Repayment</td>
-              <td>ln004</td>
               <td>2000</td>
               <td>00</td>
             </tr>
