--- a/UI/views/Client/userProfile.html
+++ b/UI/views/Client/userProfile.html
@@ -88,7 +88,7 @@
                 <span>Payment History</span>
               </a>
             </li>
-            <li>
+            <li class="active">
               <button class="dropdown-btn">
                 <img src="../../assets/imgs/gear.png" />
                 <span>Settings</span>
