--- a/UI/views/login.html
+++ b/UI/views/login.html
@@ -48,8 +48,7 @@
               <a class="primary-btn " href="#">Login</a>
             </div>
             <div class="forgot-cred">
-              <a href="fogot_uname.html">Forgot Username?</a>
-              <a href="fogot_pwd.html">Forgot Password?</a>
+              <a href="./resetPassword.html">Forgot Password?</a>
             </div>
           </div>
         </form>
