--- a/UI/views/Admin/clientProfile.html
+++ b/UI/views/Admin/clientProfile.html
@@ -104,9 +104,7 @@
                 />
               </button>
               <div class="settings-container">
-                <a href="./completeProfile.html">Complete Profile</a><br><br>
-                <a href="./Profile.html">View Profile</a><br><br>
-                <a href="./Profile.html">Blacklist</a>
+                <a href="./blacklist.html">Blacklist</a><br><br>
               </div>
             </li>
           </ul>
@@ -164,11 +162,11 @@
               </div>
               <div class="profile telephone">
                   <label class="telephone" for="telephone">Telephone</label>
-                  <input class="profile-Input" type="number" name="telephone" placeholder="" disabled="true"> 
+                  <input class="profile-Input" type="text" name="telephone" placeholder="" disabled="true"> 
               </div>
               <div class="profile email">
                   <label class="email" for="email">Email</label>
-                  <input class="profile-Input" type="number" name="email" placeholder="" disabled="true"> 
+                  <input class="profile-Input" type="text" name="email" placeholder="" disabled="true"> 
               </div>
             </div>
 
@@ -185,7 +183,7 @@
                   </div>
                   <div class="profile len_stay">
                       <label class="len_stay" for="length-stay">Length Of Stay</label>
-                      <input class="profile-Input" type="number" name="length-stay" placeholder="" disabled="true">
+                      <input class="profile-Input" type="text" name="length-stay" placeholder="" disabled="true">
                     </div>
                     <div class="profile type_of_residence">
                         <label class="type_of_residence " for="type_res">Type Of Residence</label>
