--- a/UI/views/Admin/viewAllApplications.html
+++ b/UI/views/Admin/viewAllApplications.html
@@ -99,8 +99,7 @@
               <img class="caret-down" src="../../assets/imgs/caret-down.png" />
             </button>
             <div class="settings-container">
-              <a href="./completeProfile.html">Complete Profile</a><br /><br />
-              <a href="./Profile.html">View Profile</a>
+              <a href="./blacklist.html">Blacklist</a><br /><br />
             </div>
           </li>
         </ul>
