--- a/UI/views/Admin/viewCurrentLoans.html
+++ b/UI/views/Admin/viewCurrentLoans.html
@@ -99,9 +99,7 @@
               <img class="caret-down" src="../../assets/imgs/caret-down.png" />
             </button>
             <div class="settings-container">
-              <a href="./completeProfile.html">Complete Profile</a><br /><br />
-              <a href="./Profile.html">View Profile</a><br /><br />
-              <a href="./Profile.html">Blaclist</a>
+              <a href="./blacklist.html">Blacklist</a><br /><br />
             </div>
           </li>
         </ul>
@@ -142,6 +140,8 @@
                   href="./paymentHistory.html"
                   >View
                 </a>
+                <button type="submit" class="btn btn-danger">Block</button>
+              </td>
               </td>
             </tr>
 
@@ -161,6 +161,8 @@
                   href="./paymentHistory.html"
                   >View
                 </a>
+                <button type="submit" class="btn btn-danger">Block</button>
+              </td>
               </td>
             </tr>
             <tr>
@@ -178,6 +180,8 @@
                   href="./paymentHistory.html"
                   >View
                 </a>
+                <button type="submit" class="btn btn-danger">Block</button>
+              </td>
               </td>
             </tr>
           </table>
