--- a/UI/views/Client/loanApplication.html
+++ b/UI/views/Client/loanApplication.html
@@ -93,7 +93,8 @@
               <img class="caret-down" src="../../assets/imgs/caret-down.png" />
             </button>
             <div class="settings-container">
-              <a href="./completeProfile.html">Complete Profile</a>
+              <a href="./completeProfile.html">Complete Profile</a><br /><br />
+              <a href="./userProfile.html">View Profile</a>
             </div>
           </li>
         </ul>
