--- a/UI/views/Client/completeProfile.html
+++ b/UI/views/Client/completeProfile.html
@@ -124,9 +124,9 @@
 <!--Start of Bio-data  section-->
            
            <div class="profile-data">
-
+              
             <div class="profile bio-data input">
-                <div class="lineBorder bio"><span>Bio Data</span></div>
+				 <div class="lineBorder bio"><span>Bio Data</span></div>
               <img class="user-image" src="" id="image"></img>
               <input class="img" type="file" onchange="showImage.call(this)"
               />
@@ -147,14 +147,6 @@
                   <label class="id" for="id">ID Number</label>
                   <input class="profile-Input" type="text" name="id" placeholder="Id Number">
                 </div>
-                <div class="profile nationality">
-                  <label class="nationality" for="nationality">nationality</label>
-                  <input class="profile-Input" type="text" name="nationality" placeholder="Nationality">
-                </div>
-                <div class="profile dob">
-                    <label class="dob" for="dob">D.O.B</label>
-                    <input class="profile-Input" type="date" name="dob" placeholder="">
-                  </div>
                   <div class="profile telephone">
                       <label class="telephone" for="telephone">Telephone</label>
                       <input class="profile-Input" type="number" name="telephone" placeholder="070000000">
@@ -168,9 +160,13 @@
 
             <div class="profile residence input">
                 <div class="lineBorder"><span>Residence</span></div>
+				<div class="profile nationality">
+                  <label class="nationality" for="nationality">Nationality</label>
+                  <input class="profile-Input" type="text" name="nationality" placeholder="Nationality">
+                </div>
                 <div class="profile curr_address">
                     <label class="curr-address" for="current-address">Current Address</label>
-                    <input class="profile-Input" type="text" name="current-address" placeholder="Current residence Address">
+                    <input class="profile-Input" type="text" name="current-address" placeholder="Current residence">
                   </div>
                   <div class="profile len_stay">
                       <label class="len_stay" for="length-stay">Length Of Stay</label>
