--- a/UI/views/login.html
+++ b/UI/views/login.html
@@ -87,7 +87,9 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy 2019 Quick Credit Ltd. All Rights Reserved</p>
+        <p>Quick Credit Ltd.</p>
+
+        <p>&copy 2019 All Rights Reserved</p>
       </div>
     </footer>
     <!--End of Footer section-->
