--- a/UI/styles/payment.css
+++ b/UI/styles/payment.css
@@ -35,7 +35,7 @@ form span h3 {
 .input select {
   padding-left: 1rem;
   padding-right: 1rem;
-  font-family: "Circular-Light";
+  font-family: 'Circular-Light';
   font-size: 0.8rem;
   border: 0.5px solid #c5cfd9;
   background: #ffffff;
@@ -105,12 +105,14 @@ label.loan {
     min-width: 25em;
     max-width: 35em;
     margin: 0 auto;
+    font-size: 19px;
   }
   label.loan {
     text-align: left !important;
     margin-right: 6em;
     margin-left: 25%;
     position: static;
+    font-size: 19px;
   }
   .loan-application {
     width: 60%;
