--- a/UI/styles/viewApplication.css
+++ b/UI/styles/viewApplication.css
@@ -1,8 +1,8 @@
 table {
   border-collapse: collapse;
   width: 90%;
-  font-family: " Verdana";
-  font-size: 16px;
+  font-family: ' Verdana';
+  font-size: 19px;
   text-align: center;
   margin-top: 90px;
   overflow-x: scroll;
