--- a/UI/views/Client/clientDashboard.html
+++ b/UI/views/Client/clientDashboard.html
@@ -35,7 +35,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item" href="../userLogin.html">
                       <span><img src="../../assets/imgs/power.png"/></span>
                       <span>Logout</span></a
                     >
