--- a/UI/views/adminLogin.html
+++ b/UI/views/adminLogin.html
@@ -13,7 +13,7 @@
       <nav class="navbar">
         <a class="nav-brand" href="../index.html">MKOPO </a>
         <ul class="nav-links">
-          <li class="login"><a href="./login.html" hidden>Login</a></li>
+          <li class="login"><a href="./userLogin.html" hidden>Login</a></li>
           <li class="joinus"><a href="./register.html">Join Us</a></li>
         </ul>
       </nav>
@@ -21,16 +21,18 @@
 
     <div class="container">
       <div class="login-form box">
-        <form action="/" method="POST">
+        <form action="./Admin/adminDashboard.html" method="POST">
           <div class="container">
-            <h3 class="md-text">Loign</h3>
+            <h3 class="md-text">Admin Login</h3>
             <div class="reg input">
               <label class="reg" for="email">Email</label>
               <input
                 class="reg1"
-                type="text"
+                id="emailReg"
+                type="email"
                 name="email"
                 placeholder="Your Email Address"
+                required
               />
             </div>
 
@@ -41,12 +43,19 @@
                 type="password"
                 name="password"
                 placeholder="Enter Password"
+                required
               />
             </div>
 
             <div class="m2 input">
-              <a class="primary-btn " href="#">Login</a>
+              <button class="primary-btn" type="submit">
+                Login
+              </button>
             </div>
+            <div class="loginAsUser">
+              <a href="./userLogin.html">Login as User</a>
+            </div>
+			</br>
             <div class="forgot-cred">
               <a href="./resetPassword.html">Forgot Password?</a>
             </div>
@@ -87,7 +96,9 @@
         </div>
       </div>
       <div class="copyright">
-        <p>&copy 2019 Quick Credit Ltd. All Rights Reserved</p>
+        <p>Quick Credit Ltd.</p>
+
+        <p>&copy 2019 All Rights Reserved</p>
       </div>
     </footer>
     <!--End of Footer section-->
